--- a/css/main.css
+++ b/css/main.css
@@ -34,10 +34,6 @@ span {
   cursor: pointer;
 }
 
-.home-color__title {
-  text-transform: capitalize;
-}
-
 .card-body {
   position: relative;
   z-index: 4;
@@ -90,4 +86,25 @@ span {
 
 .home-background tr {
   transition: var(--allTransitions);
+}
+
+.color-copied__container {
+  width: 150vw;
+  height: 150vh;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 4;
+}
+
+.fade-enter-active,
+.fade-leave-active {
+  transition: var(--allTransitions);
+}
+
+.fade-enter,
+.fade-leave-to {
+  opacity: 0;
+  position: absolute;
 }
